Still fixing shifting during loading.

--- a/css/large.css
+++ b/css/large.css
@@ -27,3 +27,11 @@ nav ul {
     transition: all 0.3s ease-in-out;
   }
   
+  .certificate {
+    min-height: 650px;
+  }
+  
+  .course-card {
+    min-height: 120px;
+  }
+  
